configure datasource with postgresql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.application.name=landon-hotel
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database=postgresql
+spring.datasource.url=jdbc:postgresql://localhost:5432/landon
+spring.datasource.username=${POSTGRES_DB_USERNAME}
+spring.datasource.password=${POSTGRES_DB_PASSWORD}
